@@ -1,8 +1,8 @@
-require "nokogiri"
+require 'nokogiri'
 
 module ActiveMerchant #:nodoc:
   module Billing #:nodoc:
-    class BamboraGateway < Gateway
+    class BamboraApacGateway < Gateway
       self.live_url = 'https://www.bambora.co.nz/interface/api/dts.asmx'
       self.test_url = 'https://demo.bambora.co.nz/interface/api/dts.asmx'
 
@@ -10,15 +10,15 @@ module ActiveMerchant #:nodoc:
       self.supported_cardtypes = [:visa, :master, :american_express, :diners_club, :jcb]
 
       self.homepage_url = 'http://www.bambora.com/'
-      self.display_name = 'Bambora'
+      self.display_name = 'Bambora Asia-Pacific'
 
       self.money_format = :cents
 
       STANDARD_ERROR_CODE_MAPPING = {
-        "05" => STANDARD_ERROR_CODE[:card_declined],
-        "06" => STANDARD_ERROR_CODE[:processing_error],
-        "14" => STANDARD_ERROR_CODE[:invalid_number],
-        "54" => STANDARD_ERROR_CODE[:expired_card],
+        '05' => STANDARD_ERROR_CODE[:card_declined],
+        '06' => STANDARD_ERROR_CODE[:processing_error],
+        '14' => STANDARD_ERROR_CODE[:invalid_number],
+        '54' => STANDARD_ERROR_CODE[:expired_card],
       }
 
       def initialize(options={})
@@ -27,47 +27,57 @@ module ActiveMerchant #:nodoc:
       end
 
       def purchase(money, payment, options={})
-        commit("SubmitSinglePayment") do |xml|
+        commit('SubmitSinglePayment') do |xml|
           xml.Transaction do
             xml.CustRef options[:order_id]
             add_amount(xml, money)
-            xml.TrnType "1"
+            xml.TrnType '1'
             add_credit_card(xml, payment)
-            add_credentials(xml)
+            add_credentials(xml, options)
             xml.TrnSource options[:ip]
           end
         end
       end
 
       def authorize(money, payment, options={})
-        commit("SubmitSinglePayment") do |xml|
+        commit('SubmitSinglePayment') do |xml|
           xml.Transaction do
             xml.CustRef options[:order_id]
             add_amount(xml, money)
-            xml.TrnType "2"
+            xml.TrnType '2'
             add_credit_card(xml, payment)
-            add_credentials(xml)
+            add_credentials(xml, options)
             xml.TrnSource options[:ip]
           end
         end
       end
 
       def capture(money, authorization, options={})
-        commit("SubmitSingleCapture") do |xml|
+        commit('SubmitSingleCapture') do |xml|
           xml.Capture do
             xml.Receipt authorization
             add_amount(xml, money)
-            add_credentials(xml)
+            add_credentials(xml, options)
           end
         end
       end
 
       def refund(money, authorization, options={})
-        commit("SubmitSingleRefund") do |xml|
+        commit('SubmitSingleRefund') do |xml|
           xml.Refund do
             xml.Receipt authorization
             add_amount(xml, money)
-            add_credentials(xml)
+            add_credentials(xml, options)
+          end
+        end
+      end
+
+      def void(money, authorization, options={})
+        commit('SubmitSingleVoid') do |xml|
+          xml.Void do
+            xml.Receipt authorization
+            add_amount(xml, money)
+            add_credentials(xml, options)
           end
         end
       end
@@ -85,13 +95,10 @@ module ActiveMerchant #:nodoc:
 
       private
 
-      def add_credentials(xml)
-        username, account_number = options[:username].split(":")
-        unless account_number.nil?
-          xml.AccountNumber account_number
-        end
+      def add_credentials(xml, options)
+        xml.AccountNumber options[:account_number] if options[:account_number]
         xml.Security do
-          xml.UserName username
+          xml.UserName @options[:username]
           xml.Password @options[:password]
         end
       end
@@ -101,7 +108,7 @@ module ActiveMerchant #:nodoc:
       end
 
       def add_credit_card(xml, payment)
-        xml.CreditCard :Registered => "False" do
+        xml.CreditCard :Registered => 'False' do
           xml.CardNumber payment.number
           xml.ExpM format(payment.month, :two_digits)
           xml.ExpY format(payment.year, :four_digits)
@@ -123,8 +130,8 @@ module ActiveMerchant #:nodoc:
 
       def commit(action, &block)
         headers = {
-          "Content-Type" => "text/xml; charset=utf-8",
-          "SOAPAction" => "http://www.ippayments.com.au/interface/api/dts/#{action}",
+          'Content-Type' => 'text/xml; charset=utf-8',
+          'SOAPAction' => "http://www.ippayments.com.au/interface/api/dts/#{action}",
         }
         response = parse(ssl_post(commit_url, new_submit_xml(action, &block), headers))
 
@@ -134,16 +141,16 @@ module ActiveMerchant #:nodoc:
           response,
           authorization: authorization_from(response),
           error_code: error_code_from(response),
-          test: test?,
+          test: test?
         )
       end
 
       def new_submit_xml(action)
         xml = Builder::XmlMarkup.new(indent: 2)
         xml.instruct!
-        xml.soap :Envelope, "xmlns:xsi" => "http://www.w3.org/2001/XMLSchema-instance", "xmlns:xsd" => "http://www.w3.org/2001/XMLSchema", "xmlns:soap" => "http://schemas.xmlsoap.org/soap/envelope/" do
+        xml.soap :Envelope, 'xmlns:xsi' => 'http://www.w3.org/2001/XMLSchema-instance', 'xmlns:xsd' => 'http://www.w3.org/2001/XMLSchema', 'xmlns:soap' => 'http://schemas.xmlsoap.org/soap/envelope/' do
           xml.soap :Body do
-            xml.__send__(action, "xmlns" => "http://www.ippayments.com.au/interface/api/dts") do
+            xml.__send__(action, 'xmlns' => 'http://www.ippayments.com.au/interface/api/dts') do
               xml.trnXML do
                 inner_xml = Builder::XmlMarkup.new(indent: 2)
                 yield(inner_xml)
@@ -156,11 +163,11 @@ module ActiveMerchant #:nodoc:
       end
 
       def commit_url
-        (test? ? test_url : live_url)
+        test? ? test_url : live_url
       end
 
       def success_from(response)
-        (response[:response_code] == "0")
+        response[:response_code] == '0'
       end
 
       def error_code_from(response)
