@@ -22,7 +22,7 @@ module ActiveMerchant #:nodoc:
       }
 
       def initialize(options={})
-        ActiveMerchant.deprecated("IPP gateway is now named Bambora")
+        ActiveMerchant.deprecated('IPP gateway is now named Bambora Asia-Pacific')
         requires!(options, :username, :password)
         super
       end
